--- a/index.html
+++ b/index.html
@@ -10,18 +10,54 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
-            <h2  class="nav-title">Ma<span class="text-primary">r</span>y</h2>
+            <h2  class="nav-title">Al <span class="text-primary">A</span>min</h2>
             <ul>
                 <li>Portfoloio</li>
                 <li>Blog</li>
-                <li><button>Hire Me</button></li>
+                <li><button class="btn-primary">Hire Me</button></li>
             </ul>
         </nav>
+
+        <!--Banner-->
+        <div class="banner">
+            <div>
+                <h3 class="banner-sub-title">Hi, I am</h3>
+                <h1 class="banner-title">Md Al Amin</h1>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary">
+                    Download CV
+                </button>
+            </div>
+            <img src="images/hardy.png" alt="Md Al Amin">
+        </div>
     </header>
     <main>
-
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">
+                I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
+            </p>
+            <div class="about-info-container">
+                <div class="about-info">
+                    <p class="info-title">Name</p>
+                    <p class="info-description">Md Al Amin</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Email</p>
+                    <p class="info-description">nsuer.alamin@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Date of Birth</p>
+                    <p class="info-description">00 November 1997</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">From</p>
+                    <p class="info-description">Dhaka, Bangladesh</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
