protfolio skill  section done

--- a/index.html
+++ b/index.html
@@ -58,6 +58,51 @@
                 </div>
             </div>
         </section>
+
+        <!--What i do section  -->
+        <section class="what-i-do">
+            <h3 class="section-title">What I do</h3>
+            <p class="wid-description">
+                I have more than 00 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
+            </p>
+
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Node.js</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, voluptatem quod molestiae perspiciatis officiis rerum.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Vanilla JavaScript</p>
+                    <p class="skill-description">Labore placeat cupiditate eaque maxime nobis hic ea! Doloribus adipisci laborum amet obcaecati aliquam. Praesentium.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">Architecto dolore odit illo laudantium rem, quod officia voluptate eligendi vel minima, porro quasi sit.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">MySQL</p>
+                    <p class="skill-description">Maiores alias consequatur pariatur voluptate architecto libero corrupti amet, soluta perferendis exercitationem deleniti recusandae facere?</p>
+                </div>
+            </div>
+        </section>
+
+        <!--    Resume section  -->
+        <section class="resume">
+            <h2>A summary of My Resume</h2>
+        </section>
+        <div class="resume-content-container">
+            <div class="my-eduction">
+                <h2 class="resume-title">My Eduction</h2>
+            </div>
+            
+            <div class="my-experience">
+                <h2 class="resume-title">My Experience</h2>
+            </div>
+        </div>
     </main>
     <footer>
 
