--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&family=Poppins&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/fbf5046c0b.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
@@ -27,7 +28,7 @@
                 <h1 class="banner-title">Md Al Amin</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <button class="btn-primary">
-                    Download CV
+                    <i class="fa-solid fa-download"></i> Download CV
                 </button>
             </div>
             <img src="images/hardy.png" alt="Md Al Amin">
@@ -146,7 +147,7 @@
                 </div>
             </div>
             <div class="resume-button">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
 
